# libplayerte2

./: .gitignore  CMakeLists.txt
debian/: README.Debian  README.source  changelog  control  copyright  libplayerte2.dirs  libplayerte2.install  rules
src/: CMakeLists.txt  te.cfg  te.cpp  te.h
